--- a/css/style.css
+++ b/css/style.css
@@ -6,13 +6,16 @@
 }
 
 .container {
+    height: 70vh;
     width: 50vw;
     margin: auto;
+    display: flex;
+    margin-top: 15vh;
 }
 
 .slider {
-    height: 70vh;
-    margin-top: 15vh;
+    width: 80%;
+    height: 100%;
     position: relative;
 }
 
@@ -25,7 +28,7 @@
     display: none;
 }
 
-.image {
+.image, .small-img {
     object-fit: cover;
     width: 100%;
     height: 100%;
@@ -49,7 +52,7 @@
     left: 50%;
     bottom: 10px;
     position: absolute;
-    background-color: rgb(82, 82, 0);
+    background-color: rgba(255, 255, 255, 0.7);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -65,7 +68,7 @@
     left: 50%;
     top: 10px;
     position: absolute;
-    background-color: rgb(82, 82, 0);
+    background-color: rgba(255, 255, 255, 0.7);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -76,9 +79,42 @@
     cursor: pointer;
 }
 
+.navigation-prev:hover, .navigation:hover  {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+}
+
 .circle-container {
     position: absolute;
     bottom: 20px;
     left: 50%;
     transform: translateX(-50%);
+}
+
+.right  {
+    width: 20%;
+    height: 100%;
+}
+
+.list {
+    height: 100%;
+    width: 100%;
+
+}
+
+.wrapper {
+    height: 20%;
+    width: 100%;
+}
+
+
+
+.scuro{
+    object-fit: cover;
+    filter: brightness(0.5);
+}
+
+.brightness {
+    transform: scale(0.95);
+    filter: brightness(1.5);
 }
